--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,15 @@
 
 # dependencies
 /node_modules
-public
 /.pnp
 .pnp.js
+
 
 # testing
 /coverage
 
 # production
+/public
 /build
 
 # misc
@@ -22,3 +23,4 @@ public
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
